misc/draft/.kube-draft.netpol-and-cm/.BACKUP.netpol/deny.all.egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Egress
