misc/draft/.kube-draft.netpol-and-cm/.BACKUP.netpol/deny.psql4demo.ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: demo.nginx.deny
spec:
  podSelector:
    matchLabels:
      app: psql4demo
  ingress: []
