misc/draft/.kube-draft.netpol-and-cm/.BACKUP.netpol/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
spec:
# podSelector: {}
  podSelector:
    matchLabels:
      app: psql4demo
#     role: psql4demo
  ingress:
  - {}
  policyTypes:
  - Ingress
